# conifer

./: docker-compose.yml  init.sql
backend/: main.py  pyproject.toml
extension/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
extension/src/: Content.tsx  background.ts  main.tsx
news-soup/: main.py  populate_table.py  test.py
